# codex-python-sdk-unofficial

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/: codex-upstream-state.json
.github/workflows/: backport-release.yml  legacy-release.yml  publish-pypi.yml  version-tracker.yml
docs/: README.md  api.md  codex-options.md  dependency-policy.md  ergonomics-mapping.md  package-layout.md  protocol-model-codegen.md  public-api-contract.md  public-import-policy.md  schema-vendoring.md  upstream-major-changelog.md  upstream-reference-map.md  upstream-tracking.md
docs/adr/: 0001-native-async-app-server-scope.md  0002-concurrency-and-state-model.md  0003-errors-timeouts-and-cancellation.md
examples/: README.md  file_brief.py  interactive_thread.py  workspace_brief.py
requirements/: codegen.txt  dev.txt  runtime.txt
scripts/: README.md  backport_release_history.py  generate_protocol_models.py  vendor_protocol_schema.py
src/codex_agent_sdk/: __init__.py  _debug.py  _turn_aggregation.py  approvals.py  client.py  errors.py  events.py  options.py  query.py  results.py  retry.py  sync_client.py
src/codex_agent_sdk/protocol/: __init__.py  adapters.py  initialize.py  pydantic.py  registries.py  server_requests.py
src/codex_agent_sdk/rpc/: __init__.py  connection.py  jsonrpc.py  router.py
src/codex_agent_sdk/testing/: __init__.py  fake_app_server.py
src/codex_agent_sdk/transport/: __init__.py  stdio.py
src/codex_meta_agent/: __init__.py  __main__.py  backport_history.py  release_metadata.py  version_tracker.py
tests/: test_app_server_client.py  test_approvals.py  test_backport_history.py  test_codegen_regressions.py  test_contributing_guide.py  test_dependency_policy.py  test_documentation_cleanup.py  test_errors.py  test_examples.py  test_fake_app_server.py  test_fixture_layout.py  test_generated_notification_registry.py  test_generated_protocol_models.py  test_generated_server_request_registry.py  test_options.py  test_package_layout.py  test_project_configuration.py  test_protocol_adapters.py  test_protocol_registries.py  test_public_barrel.py  test_query.py  test_release_metadata.py  test_retry.py  test_rpc_dispatcher.py  test_rpc_jsonrpc.py  test_rpc_notification_bus.py  test_rpc_router.py  test_rpc_server_request_router.py  test_schema_vendoring.py  test_sdk_client.py  test_stdio_transport.py  test_turn_output_aggregator.py  test_version_tracker.py
tests/fixtures/: README.md
tests/fixtures/fake_server_scripts/: 100_turn_start_and_complete.script.jsonl  README.md
tests/fixtures/golden_transcripts/approvals/: README.md
tests/fixtures/golden_transcripts/turns/: README.md
tests/fixtures/jsonrpc/notifications/: README.md
tests/fixtures/jsonrpc/requests/: README.md
tests/fixtures/jsonrpc/responses/: README.md
tests/fixtures/jsonrpc/server_requests/: README.md
tests/fixtures/schema_snapshots/: vendor_manifest.json
tests/fixtures/schema_snapshots/experimental/: README.md  codex_app_server_protocol.v2.experimental.schemas.json
tests/fixtures/schema_snapshots/stable/: README.md  codex_app_server_protocol.v2.stable.schemas.json
