[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[project]
name = "codex-agent-sdk-unofficial"
version = "0.119.0"
description = "Unofficial, natively async Python SDK for Codex app-server over JSON-RPC v2 on stdio."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Oberon AI" }]
dependencies = ["pydantic>=2.13,<3"]
keywords = ["codex", "json-rpc", "asyncio", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/oberon-ai/codex-python-sdk-unofficial"
Repository = "https://github.com/oberon-ai/codex-python-sdk-unofficial"
Issues = "https://github.com/oberon-ai/codex-python-sdk-unofficial/issues"
Documentation = "https://github.com/oberon-ai/codex-python-sdk-unofficial/blob/main/docs/README.md"
Changelog = "https://github.com/oberon-ai/codex-python-sdk-unofficial/releases"

[dependency-groups]
dev = [
    "mypy>=1.20,<2",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "ruff>=0.15,<0.16",
]
codegen = ["datamodel-code-generator>=0.56,<0.57"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = ["codex_agent_sdk", "codex_meta_agent"]

[tool.pytest.ini_options]
addopts = ["-ra"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["src/codex_agent_sdk/generated"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["codex_agent_sdk", "codex_meta_agent"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
mypy_path = "src"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
exclude = "^src/codex_agent_sdk/generated/"
